cmake_minimum_required(VERSION 3.23)
project(unp_ch3)
set(CMAKE_C_STANDARD 11)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY .)
file(GLOB_RECURSE C_FILE_LIST *.c)

message("Build unp chapter03 ...")
foreach (CURRENT_FILE ${C_FILE_LIST})
    get_filename_component(TARGET_NAME ${CURRENT_FILE} NAME_WE)
    add_executable(${TARGET_NAME} ${CURRENT_FILE})
    target_link_libraries(${TARGET_NAME} UnpLib)
    message("${TARGET_NAME}")
endforeach ()
message("Build unp chapter03 success\n")
